kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: destination-tester-client
  namespace: service-discovery
  labels:
    service: destination-tester
    component: client
spec:
  replicas: 1
  selector:
    matchLabels:
      service: destination-tester
      component: client
  template:
    metadata:
      annotations:
        beta.fabric.datadoghq.com/inject-lifecycle: injected
        beta.fabric.datadoghq.com/proxy-configmap: destination-tester-config
        beta.fabric.datadoghq.com/proxy-cpu-limit: 20m
        beta.fabric.datadoghq.com/proxy-memory-limit: 100Mi
      labels:
        service: destination-tester
        component: client
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/nodeless
                operator: Exists
      tolerations:
      - effect: NoSchedule
        key: node
        operator: Equal
        value: nodeless
      volumes:
      - configMap:
          defaultMode: 420
          name: destination-tester-config
        name: config
      containers:
      - name: client
        image: 727006795293.dkr.ecr.us-east-1.amazonaws.com/service-discovery-platform/destination-tester:v2
        command: ["/client", "-address", "destination-tester-zonal-failover.service-discovery.sidecar-proxy.fabric.dog", "-period", "100ms", "-port", "15001"]
        volumeMounts:
        - mountPath: /etc/datadog
          name: config
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 1
            memory: 1Gi
