kubernetes/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retry-tester-server
  labels:
    app: retry-tester
    component: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: retry-tester
      component: server
  template:
    metadata:
      labels:
        app: retry-tester
        component: server
    spec:
      containers:
      - name: server
        image: eu.gcr.io/infra-sandbox-58fe57e9/grpc-tester:latest
        command: ["/server"]
        ports:
        - containerPort: 8888
          name: http-admin
        - containerPort: 50051
          name: grpc
