kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: retry-tester
    component: server
  name: retry-tester
  namespace: felix
spec:
  ports:
  - name: http-admin
    port: 8888
    protocol: TCP
  - name: grpc
    port: 50051
    protocol: TCP
  selector:
    app: retry-tester
    component: server
