kubernetes/dr.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: retry-tester
  namespace: felix
spec:
  host: retry-tester.felix.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        connectTimeout: 100ms
    http:
      h2UpgradePolicy: UPGRADE
    loadBalancer:
      simple: LEAST_CONN
