kubernetes/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: retry-tester
  namespace: felix
spec:
  hosts:
  - retry-tester.felix.svc.cluster.local
  http:
  - timeout: 400ms
    route:
    - destination:
        host: retry-tester.felix.svc.cluster.local
    retries:
      attempts: 2
      perTryTimeout: 100ms
      retryOn: "connect-failure,gateway-error,cancelled,deadline-exceeded,unavailable,internal,resource-exhausted"
